webapp/src/styles/map.scss
@import "./variables";

.map-sidebar {
  width: 280px;
}

// NB: .map-controls is on the sidebar
.map-controls {
  align-items: flex-start;
  .legend {
    // NB: copied from genomebrowser.scss (and tree.scss)
    .legend-element {
      min-height: 26px;
      display: flex;
      align-items: center;
      justify-content: flex-start;
      padding-left: 16px;
      .label {
        padding-left: 8px;
      }
    }
  }
}

.map-content {
  height: calc(100% - #{$topbar-height});
}

// Custom controls (e.g. legend) on the map itself
.map-custom-control {
  background-color: white;
  opacity: 0.7;
  border-radius: 10px;
  .legend {
    padding: 5px 10px 5px 10px;
    // NB: copied from genomebrowser.scss (and tree.scss)
    .legend-element {
      min-height: 16px;
      display: flex;
      align-items: center;
      justify-content: flex-start;
      .label {
        padding-left: 8px;
      }
    }
  }
}

.panoptes-chart-pie-sector {
  stroke: rgb(0, 0, 0);
  stroke-width: 0.5;
}

.panoptes-chart-pie-sector-highlighted {
  stroke: $light-primary-color;
  stroke-width: 4;
}

.panoptes-histogram {
  overflow: visible;
  position: absolute;
}

.panoptes-histogram-bg {
  fill: white;
}

.panoptes-histogram-axes {
  stroke: black;
  stroke-width: 2;
}

.panoptes-histogram-axes-highlighted {
  stroke: $light-primary-color;
  stroke-width: 4;
}

.panoptes-table-markers-layer-polyline {
  stroke: black;
  fill: none;
  stroke-width: 2;
}

.panoptes-pie-chart-markers-layer-polyline {
  stroke: $primary-color;
  fill: none;
  stroke-width: 1;
}

